Java17 syntax